# intermicrocontroller_comms

./: README.md
arduino-arduino/i2c/master-slave/master_controller/: master_controller.ino
arduino-arduino/i2c/master-slave/slave_controlled/: slave_controlled.ino
arduino-arduino/i2c/slave-slave/slave_controlled/: slave_controlled.ino
arduino-arduino/i2c/slave-slave/slave_controller/: slave_controller.ino
arduino-arduino/rf24/EmiterRf24/: EmiterRf24.ino
arduino-arduino/rf24/ReceiverRf24/: ReceiverRf24.ino
arduino-arduino/serial/master_controller/: master_controller.ino
arduino-arduino/serial/slave_controlled/: slave_controlled.ino
arduino-arduino/spi/master_controller/: master_controller.ino
arduino-arduino/spi/slave_controlled/: slave_controlled.ino
doc-links/: i2c.txt  links.txt  multiple.txt  nRF24L01.txt  serial.txt  spi.txt
micropython/pico/uart_rx_tx/: main.py  pio_rx_tx.py
pico-arduino/master_serial/: CMakeLists.txt  master_serial.c
pico-arduino/master_serial_sw/: CMakeLists.txt  master_serial.c
pico-arduino/master_serial_sw_lcd/: CMakeLists.txt  master_serial.cpp  uart_rx.pio  uart_tx.pio
